--- a/C482/C482/src/view/ModifyProductScreen.fxml
+++ b/C482/C482/src/view/ModifyProductScreen.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AddProductScreenController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ModifyProductScreenController">
    <children>
       <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0" style="-fx-border-style: solid; -fx-border-width: 2; -fx-border-radius: 15; -fx-border-insets: 5;">
          <children>
@@ -81,32 +81,32 @@
                               <Insets left="50.0" />
                            </GridPane.margin>
                         </Label>
-                        <TextField editable="false" promptText="Auto Gen - Disabled" GridPane.columnIndex="1">
+                        <TextField disable="true" editable="false" promptText="Auto Gen - Disabled" GridPane.columnIndex="1">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </TextField>
-                        <TextField promptText="Name" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <TextField fx:id="productNameField" promptText="Name" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </TextField>
-                        <TextField maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" promptText="Inventory" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                        <TextField fx:id="invField" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" promptText="Inventory" GridPane.columnIndex="1" GridPane.rowIndex="2">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </TextField>
-                        <TextField maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" promptText="Price" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                        <TextField fx:id="priceField" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" promptText="Price" GridPane.columnIndex="1" GridPane.rowIndex="3">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </TextField>
-                        <TextField maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" promptText="Max" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                        <TextField fx:id="maxField" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" promptText="Max" GridPane.columnIndex="1" GridPane.rowIndex="4">
                            <GridPane.margin>
                               <Insets left="10.0" />
                            </GridPane.margin>
                         </TextField>
-                        <TextField maxWidth="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="100.0" promptText="Min" GridPane.columnIndex="2" GridPane.rowIndex="4">
+                        <TextField fx:id="minField" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="100.0" promptText="Min" GridPane.columnIndex="2" GridPane.rowIndex="4">
                            <GridPane.margin>
                               <Insets left="10.0" />
                            </GridPane.margin>
@@ -133,7 +133,7 @@
                <children>
                   <HBox prefHeight="40.0" prefWidth="200.0">
                      <children>
-                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Search">
+                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#searchButtonPressed" prefHeight="25.0" prefWidth="100.0" text="Search">
                            <HBox.margin>
                               <Insets left="105.0" right="10.0" />
                            </HBox.margin>
@@ -148,17 +148,17 @@
                         <Insets top="50.0" />
                      </VBox.margin>
                   </HBox>
-                  <TableView maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="125.0" prefWidth="400.0">
+                  <TableView fx:id="availablePartsTable" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="125.0" prefWidth="400.0">
                     <columns>
-                      <TableColumn text="Part ID" />
-                      <TableColumn prefWidth="110.0" text="Part Name" />
-                        <TableColumn prefWidth="100.0" text="Inventory Level" />
-                        <TableColumn prefWidth="110.0" text="Price per Unit" />
+                      <TableColumn fx:id="availablePartIdColumn" text="Part ID" />
+                      <TableColumn fx:id="availablePartNameColumn" prefWidth="110.0" text="Part Name" />
+                        <TableColumn fx:id="availablePartInvColumn" prefWidth="100.0" text="Inventory Level" />
+                        <TableColumn fx:id="availablePartPriceColumn" prefWidth="110.0" text="Price per Unit" />
                     </columns>
                   </TableView>
                   <ButtonBar prefHeight="40.0" prefWidth="200.0">
                     <buttons>
-                      <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Add" />
+                      <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#addButtonPressed" prefHeight="25.0" prefWidth="100.0" text="Add" />
                     </buttons>
                      <VBox.margin>
                         <Insets />
@@ -167,17 +167,17 @@
                         <Insets right="100.0" />
                      </padding>
                   </ButtonBar>
-                  <TableView maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="125.0" prefWidth="400.0">
+                  <TableView fx:id="addedPartsTable" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="125.0" prefWidth="400.0">
                     <columns>
-                      <TableColumn text="Part ID" />
-                      <TableColumn prefWidth="110.0" text="Part Name" />
-                        <TableColumn prefWidth="100.0" text="Inventory Level" />
-                        <TableColumn prefWidth="110.0" text="Price per Unit" />
+                      <TableColumn fx:id="addedPartIdColumn" text="Part ID" />
+                      <TableColumn fx:id="addedPartNameColumn" prefWidth="110.0" text="Part Name" />
+                        <TableColumn fx:id="addedPartInvColumn" prefWidth="100.0" text="Inventory Level" />
+                        <TableColumn fx:id="addedPartPriceColumn" prefWidth="110.0" text="Price per Unit" />
                     </columns>
                   </TableView>
                   <ButtonBar prefHeight="40.0" prefWidth="200.0">
                     <buttons>
-                      <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Delete" />
+                      <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#deleteButtonPressed" prefHeight="25.0" prefWidth="100.0" text="Delete" />
                     </buttons>
                      <padding>
                         <Insets right="100.0" />
@@ -185,7 +185,7 @@
                   </ButtonBar>
                   <ButtonBar prefHeight="40.0" prefWidth="200.0">
                     <buttons>
-                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Save" />
+                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#saveButtonPressed" prefHeight="25.0" prefWidth="100.0" text="Save" />
                         <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#cancelButtonPressed" prefHeight="25.0" prefWidth="100.0" text="Cancel" />
                     </buttons>
                      <padding>
